--- a/api/carscollection-api/carscollection-api.csproj
+++ b/api/carscollection-api/carscollection-api.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>carscollection_api</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="3.1.8" />
+  </ItemGroup>
+
 
 </Project>
